# stencil

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench.sh
data/plot/: compare_makespan.conf  compare_speedup.conf
include/stencil/: stencil.h
src/: CMakeLists.txt  stencil-baseline.c  stencil-cuda.cu  stencil-openmp-block.c  stencil-openmp.c  stencil-simd.c
test/: CMakeLists.txt  test.sh
